@@ -117,20 +117,17 @@ extern "C"
      */
 
     PRE_PACKED_STRUCTURE
-    typedef struct _jack_shm_info {
+    struct _jack_shm_info {
         jack_shm_registry_index_t index;       /* offset into the registry */
         uint32_t size;
         union {
             void *attached_at;  /* address where attached */
             char ptr_size[8];
         } ptr;  /* a "pointer" that has the same 8 bytes size when compling in 32 or 64 bits */
-    }
-#ifdef _MSC_VER
-    jack_shm_info_t; POST_PACKED_STRUCTURE
-#else
-    POST_PACKED_STRUCTURE jack_shm_info_t;
-#endif
-
+    } POST_PACKED_STRUCTURE;
+    
+    typedef struct _jack_shm_info jack_shm_info_t;
+    
 	/* utility functions used only within JACK */
 
     void jack_shm_copy_from_registry (jack_shm_info_t*,
